@@ -26,7 +26,7 @@ Dist::Zilla::Plugin::Test::EOL = 0.17
 Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0.012
 Dist::Zilla::Plugin::Test::ChangesHasContent = 0
-Dist::Zilla::Plugin::Test::MinimumVersion = 2.000003
+Dist::Zilla::Plugin::Test::MinimumVersion = 2.000008
 Dist::Zilla::Plugin::PodSyntaxTests = 5.040
 Dist::Zilla::Plugin::PodCoverageTests = 5.040
 Dist::Zilla::Plugin::Test::PodSpelling = 2.006003
@@ -171,7 +171,6 @@ Test::Mojibake = 0
 -relationship = requires
 Test::Spelling = 0.19
 Pod::Wordlist = 1.09
-Test::MinimumVersion = 0
 
 [Prereqs / local author tests]
 -phase = develop
